Fix icon alignment in responsive store download buttons

--- a/ImagineSoftwareWebsite/ImagineSoftwareWebsite/wwwroot/css/responsive.css
+++ b/ImagineSoftwareWebsite/ImagineSoftwareWebsite/wwwroot/css/responsive.css
@@ -150,6 +150,7 @@
         .store-download-buttons-group > a {
             margin: 0.5rem 0;
             width: 100%;
+            text-align: left;
         }
 
     .image-paragraph img {
